fixed a problem where text would be unreadable in phone version

--- a/src/components/CountryDetails.css
+++ b/src/components/CountryDetails.css
@@ -121,15 +121,6 @@ background-color: var(--text-color-dark);
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
-}
-
-text {
-  font-size: 13px;
-  color: white;
-}
-.bct {
-  font-size: 17px;
 }
 
 .border-countries-box {
@@ -163,95 +154,66 @@ text {
   .home-link-container {
     margin-left: 20px;
   }
-
   .home-button-box {
     max-width: 90%;
   }
-  
   .country-details {
+    margin: auto;
     flex-direction: column;
-    height: 500px;
-  }
-
-  .flag-container-single {
+    height: 700px;
     width: 90%;
-    height: 50%;
+    display: flex;
+  }
+  .flag-container-single {
+    width: 100%;
+    height: 200px;
     border-radius: 10px;
     margin-top: 25px;
+    padding-bottom:-40px ;
   }
-
-  .country-details {
-    height: 700px;
-  }
-
   .flag {
     border-radius: 10px;
   }
 
-  .country-details-text-container {
-    width: 90%;
-    display: flex;
-  }
   .country-details-title {
-    width: 100%;
-    margin-top: 0px;
+    width: 340px;
+    height: 20px;
   }
   .country-details-text {
     font-size: 14px;
-    height: 170px;
+    height: 200px;
     display: flex;
     line-height: 1.7;
-
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
   }
   .country-details p {
     width: 45%;
     font-weight: bold;
   }
   .currencies-text {
-    height: 30px;
-    width: 90%;
-    line-height: 1;
-    
+    height: 40px;
+    width: 400px;
+    line-height: 1.2;
   }
   .native-name-title {
-    font-size: 12px;
-    flex-direction: row;
-    line-height: 1;
-    display: flex;
-    justify-content: left;
-    align-items: start;
-    margin-top: -20px;
-
-  }
-  .native-name-title p {
+    margin-top: -40px;
+    height: 30px;
     width: 100%;
   }
-  
-  /*CountryDetailsLoader css */
-
-  .bct {
-    font-size: 17px;
-  }
-
-  .border-countries-box p {
-    height: 60px;
-    width: 100px;
-    display: inline-block;
-    word-wrap: break-word;
-  }
-
   .border-countries-box {
-    width: 360px;
-    justify-content: flex-start;
-    
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
   .skeleton-details {
     flex-direction: column;
     width: 110vh;
     margin-left: 5%;
   }
-
 }
 
 @media only screen and (max-width: 400px) {
@@ -260,4 +222,31 @@ text {
     width: 710px;
     margin-top: 85px;
   }
+
+  .country-details-text-container {
+    margin: auto;
+    width: 100%;
   }
+
+  .country-details-text {
+    width: 100%;
+    line-height: 2;
+    align-items: self-start;
+  }
+  .native-name-title {
+    font-size: 14px;
+    line-height: 1.8;
+    overflow: hidden;
+  }
+  .native-name-title p {
+    width: 350px;
+    overflow: hidden;
+  }
+  .border-countries-box {
+    width: 350px;
+    overflow-x: auto;
+    height: 50px;
+    justify-content: start;
+  }
+
+}
